--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   </head>
 
   <body>
-    <h1>HLM+</h1>
-    <h1>ERLJ</h1>
+    <nav>
+      <h2>Welcome to our wedding!!!</h2>
+    </nav>
+    <main>
+      <h1>HLM+</h1>
+      <h1>ERLJ</h1>
+    </main>
   </body>
 </html>
