--- a/index.html
+++ b/index.html
@@ -1,19 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>It's Lusk-Jop-Dougall Wedding!</title>
-    <link rel="stylesheet" href="global.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Our Wedding</title>
+    <link rel="stylesheet" href="./css/index.css" />
   </head>
-
   <body>
-    <nav>
-      <h2>Welcome to our wedding!!!</h2>
+    <nav class="nav">
+      <div class="nav__left">
+        <h2 class="nav__logo">
+          <a href="./index.html">Eric and Louise's Wedding</a>
+        </h2>
+      </div>
+      <div class="nav__right">
+        <ul>
+          <li class="nav__link--active">
+            <a href="./index.html">Home</a>
+          </li>
+          <li class="nav__link">Location</li>
+          <li class="nav__link">Itinerary</li>
+          <li class="nav__link">Gallery</li>
+          <li class="nav__link">RSVP</li>
+        </ul>
+      </div>
     </nav>
     <main>
-      <h1>HLM+</h1>
-      <h1>ERLJ</h1>
+      <h2>
+        We are getting married! Join us for a week of celebrations and love.
+      </h2>
+      <p>Date: To be Announced...</p>
     </main>
+    <footer class="footer">
+      <div class="container">
+        <div class="contact-info">
+          <h3>Contact Louise</h3>
+          <p>hannmacd@gmail.com</p>
+          <p>
+            <a href="tel:7788864262">(778) 886-4262</a>
+          </p>
+        </div>
+        <div class="contact-info">
+          <h3>Contact Eric</h3>
+          <p>eluskjopson@gmail.com</p>
+          <p>
+            <a href="tel:2368622964">(236) 862-2964</a>
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
