created a background for the index page

--- a/index.html
+++ b/index.html
@@ -25,11 +25,22 @@
         </ul>
       </div>
     </nav>
+
     <main>
-      <h2>
-        We are getting married! Join us for a week of celebrations and love.
-      </h2>
-      <p>Date: To be Announced...</p>
+      <div class="container">
+        <div class="container__content">
+          <h2 class="container__header">
+            We are getting married! <br />
+            Join us for a week of celebrations and love.
+          </h2>
+          <p class="container__date">Date: To be Announced...</p>
+        </div>
+      </div>
+      <img
+        class="main-background"
+        src="./assets/photo-2.JPG"
+        alt="Eric and Louise on the beach"
+      />
     </main>
     <footer class="footer">
       <div class="container">
