worked on the photo gallery and it's styling

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           </li>
           <li class="nav__link">Location</li>
           <li class="nav__link">Itinerary</li>
-          <li class="nav__link">Gallery</li>
+          <li class="nav__link"><a href="./pages/gallery.html">Gallery</a></li>
           <li class="nav__link">RSVP</li>
         </ul>
       </div>
@@ -38,7 +38,7 @@
       </div>
       <img
         class="main-background"
-        src="./assets/photo-2.JPG"
+        src="./assets/images/photo-2.JPG"
         alt="Eric and Louise on the beach"
       />
     </main>
