whi does it wiggle?

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <nav class="nav">
       <div class="nav__left">
         <h2 class="nav__logo">
-          <a href="./index.html">Eric and Louise's Wedding</a>
+          <img
+            src="./assets/images/icons/flower2.svg"
+            alt="flower logo"
+            class="flower__logo"
+          />
         </h2>
       </div>
       <div class="nav__right">
@@ -43,20 +47,23 @@
       />
     </main>
     <footer class="footer">
-      <div class="container">
-        <div class="contact-info">
-          <h3>Contact Louise</h3>
-          <p>hannmacd@gmail.com</p>
-          <p>
-            <a href="tel:7788864262">(778) 886-4262</a>
-          </p>
-        </div>
-        <div class="contact-info">
-          <h3>Contact Eric</h3>
-          <p>eluskjopson@gmail.com</p>
-          <p>
-            <a href="tel:2368622964">(236) 862-2964</a>
-          </p>
+      <div class="container" ;>
+        <h2 class="footer__header">Get in Touch</h2>
+        <div class="container-contacts">
+          <div class="contact-info">
+            <h3>Contact Louise</h3>
+            <p>hannmacd@gmail.com</p>
+            <p>
+              <a href="tel:7788864262">(778) 886-4262</a>
+            </p>
+          </div>
+          <div class="contact-info">
+            <h3>Contact Eric</h3>
+            <p>eluskjopson@gmail.com</p>
+            <p>
+              <a href="tel:2368622964">(236) 862-2964</a>
+            </p>
+          </div>
         </div>
       </div>
     </footer>
