--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -10,13 +10,18 @@
     <nav class="nav">
       <div class="nav__left">
         <h2 class="nav__logo">
-          <a href="./index.html">Eric and Louise's Wedding</a>
+          <a href="../index.html"
+            ><img
+              src="../assets/images/icons/flower2.svg"
+              alt="flower logo"
+              class="flower__logo"
+          /></a>
         </h2>
       </div>
       <div class="nav__right">
         <ul>
           <li class="nav__link">
-            <a href="./index.html">Home</a>
+            <a href="../index.html">Home</a>
           </li>
           <li class="nav__link--active">Location</li>
           <li class="nav__link">Itinerary</li>
