changes to the footer on the menu page. Edits to the size of teh background image.

--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
   <body>
     <nav class="nav">
       <div class="nav__left">
-        <h2 class="nav__logo">
-          <img
-            src="./assets/images/icons/flower2.svg"
-            alt="flower logo"
-            class="flower__logo"
-          />
-        </h2>
+        <img
+          class="flower__logo"
+          src="./assets/images/icons/flower2.svg"
+          alt="flower logo"
+          class="flower__logo"
+        />
       </div>
       <div class="nav__right">
         <ul>
@@ -23,9 +22,12 @@
             <a href="./index.html">Home</a>
           </li>
           <li class="nav__link">Location</li>
-          <li class="nav__link">Itinerary</li>
+          <li class="nav__link">
+            <a href="./pages/itinerary.html">Itinerary</a>
+          </li>
           <li class="nav__link"><a href="./pages/gallery.html">Gallery</a></li>
           <li class="nav__link">RSVP</li>
+          <li class="nav__link">Registry</li>
         </ul>
       </div>
     </nav>
@@ -45,8 +47,32 @@
         src="./assets/images/photo-2.JPG"
         alt="Eric and Louise on the beach"
       />
+      <div class="scrolling-text__container">
+        <p class="scrolling-text">
+          LOVE LOVE LOVE LOVE LOVE LOVE LOVE LOVE LOVE LOVE LOVE LOVE LOVE LOVE
+          LOVE LOVE LOVE LOVE LOVE LOVE LOVE LOVE I don't believe in an
+          interventionist God But I know, darling, that you do But if I did I
+          would kneel down and ask Him Not to intervene when it came to you Oh,
+          not to touch a hair on your head Leave you as you are And if He felt
+          He had to direct you Then direct you into my arms Into my arms, O Lord
+          Into my arms, O Lord Into my arms, O Lord Into my arms And I don't
+          believe in the existence of angels But looking at you I wonder if
+          that's true But if I did I would summon them together And ask them to
+          watch over you Or to each burn a candle for you To make bright and
+          clear your path And to walk, like Christ, in grace and love And guide
+          you into my arms Into my arms, O Lord Into my arms, O Lord Into my
+          arms, O Lord Into my arms But I believe in Love And I know that you do
+          too And I believe in some kind of path That we can walk down, me and
+          you So keep your candles burning Make her journey bright and pure That
+          she will keep returning Always and evermore Into my arms, O Lord Into
+          my arms, O Lord Into my arms, O Lord Into my arms LOVE LOVE LOVE LOVE
+          LOVE LOVE LOVE LOVE LOVE LOVE LOVE LOVE LOVE LOVE LOVE LOVE LOVE LOVE
+          LOVE LOVE LOVE LOVELOVE LOVE LOVE LOVE LOVE LOVE LOVE LOVE LOVE LOVE
+          LOVE LOVE LOVE LOVE LOVE LOVE LOVE LOVE LOVE LOVE LOVE LOVE
+        </p>
+      </div>
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container" ;>
         <h2 class="footer__header">Get in Touch</h2>
         <div class="container-contacts">
@@ -66,6 +92,6 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
