--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -23,10 +23,11 @@
           <li class="nav__link">
             <a href="../index.html">Home</a>
           </li>
-          <li class="nav__link--active">Location</li>
-          <li class="nav__link">Itinerary</li>
-          <li class="nav__link">Gallery</li>
+          <li class="nav__link"><a href="./location.html">Location</a></li>
+          <li class="nav__link"><a href="./itinerary.html">Itinerary</a></li>
+          <li class="nav__link--active">Gallery</li>
           <li class="nav__link">RSVP</li>
+          <li class="nav__link">Registry</li>
         </ul>
       </div>
     </nav>
@@ -50,5 +51,26 @@
         <img src="../assets/images/photo-18.jpg" />
       </div>
     </section>
+    <footer class="footer">
+      <div class="container" ;>
+        <h2 class="footer__header">Get in Touch</h2>
+        <div class="container-contacts">
+          <div class="contact-info">
+            <h3>Contact Louise</h3>
+            <p>hannmacd@gmail.com</p>
+            <p>
+              <a href="tel:7788864262">(778) 886-4262</a>
+            </p>
+          </div>
+          <div class="contact-info">
+            <h3>Contact Eric</h3>
+            <p>eluskjopson@gmail.com</p>
+            <p>
+              <a href="tel:2368622964">(236) 862-2964</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
