linked pages to each other. RSVP page still empty

--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
           <li class="nav__link--active">
             <a href="./index.html">Home</a>
           </li>
-          <li class="nav__link">Location</li>
+          <li class="nav__link">
+            <a href="./pages/location.html">Location</a>
+          </li>
           <li class="nav__link">
             <a href="./pages/itinerary.html">Itinerary</a>
           </li>
           <li class="nav__link"><a href="./pages/gallery.html">Gallery</a></li>
-          <li class="nav__link">RSVP</li>
+          <li class="nav__link"><a href="./pages/rsvp.html">RSVP</a></li>
           <li class="nav__link">Registry</li>
         </ul>
       </div>
