--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -25,8 +25,10 @@
           </li>
           <li class="nav__link"><a href="./location.html">Location</a></li>
           <li class="nav__link"><a href="./itinerary.html">Itinerary</a></li>
-          <li class="nav__link--active">Gallery</li>
-          <li class="nav__link">RSVP</li>
+          <li class="nav__link--active">
+            <a href="./gallery.html">Gallery</a>
+          </li>
+          <li class="nav__link"><a href="./pages/rsvp.html">RSVP</a></li>
           <li class="nav__link">Registry</li>
         </ul>
       </div>
