--- a/pages/itinerary.html
+++ b/pages/itinerary.html
@@ -22,10 +22,12 @@
           <li>
             <a href="../index.html">Home</a>
           </li>
-          <li class="nav__link">Location</li>
-          <li class="nav__link--active">Itinerary</li>
+          <li class="nav__link"><a href="./location.html">Location</a></li>
+          <li class="nav__link--active">
+            <a href="./itinerary.html">Itinerary</a>
+          </li>
           <li class="nav__link"><a href="./pages/gallery.html">Gallery</a></li>
-          <li class="nav__link">RSVP</li>
+          <li class="nav__link"><a href="./rsvp.html">RSVP</a></li>
           <li class="nav__link">Registry</li>
         </ul>
       </div>
