cstyling hanges to the pages

--- a/pages/location.html
+++ b/pages/location.html
@@ -33,5 +33,31 @@
         </ul>
       </div>
     </nav>
+
+    <section id="location__section">
+      <h1 class="location__section--title">Join us Aboard the Rotterdam</h1>
+      <div class="card-container">
+        <div class="card">
+          <a href="./itinerary.html"></a>
+          <figure class="location-card__image">
+            <img
+              class="location-card__background"
+              src="../assets/images/photo-11.JPG"
+              alt="Eric and Louise's shoes on the beach"
+            />
+            <h2 class="location-card__label">TBD</h2>
+          </figure>
+        </div>
+        <div class="location-card__text">
+          <h2>Why a Cruise Wedding?</h2>
+          <p>
+            For us, love is an adventure, and what better way to celebrate than
+            amidst the breathtaking beauty of the open sea and Northern Europe?
+            We're swapping tradition for the extraordinary, and we hope you will
+            join us.
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
