--- a/pages/location.html
+++ b/pages/location.html
@@ -45,7 +45,6 @@
               src="../assets/images/photo-11.JPG"
               alt="Eric and Louise's shoes on the beach"
             />
-            <h2 class="location-card__label">TBD</h2>
           </figure>
         </div>
         <div class="location-card__text">
@@ -59,5 +58,26 @@
         </div>
       </div>
     </section>
+    <footer class="footer">
+      <div class="container" ;>
+        <h2 class="footer__header">Get in Touch</h2>
+        <div class="container-contacts">
+          <div class="contact-info">
+            <h3>Contact Louise</h3>
+            <p>hannmacd@gmail.com</p>
+            <p>
+              <a href="tel:7788864262">(778) 886-4262</a>
+            </p>
+          </div>
+          <div class="contact-info">
+            <h3>Contact Eric</h3>
+            <p>eluskjopson@gmail.com</p>
+            <p>
+              <a href="tel:2368622964">(236) 862-2964</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
