--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Our Wedding</title>
+    <link rel="stylesheet" href="./css/global.css" />
     <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
@@ -35,14 +36,12 @@
     </nav>
 
     <main>
-      <div class="container">
-        <div class="container__content">
-          <h2 class="container__header">
-            We are getting married! <br />
-            Join us for a week of celebrations and love.
-          </h2>
-          <p class="container__date">Date: To be Announced...</p>
-        </div>
+      <div class="announcement__content">
+        <h2 class="announcement__header">
+          We are getting married! <br />
+          Join us for a week of celebrations and love.
+        </h2>
+        <p class="announcement__date">Date: To be Announced...</p>
       </div>
       <img
         class="main-background"
